--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.3",
     "express": "^4.18.3",
     "firebase": "^10.12.2",
     "gsap": "^3.12.5",
